update Theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: LaityTheme
+Theme Name: NorthTexasUMC 2016
 Theme URI:
 Author: ChurchBuzz.org
 Author URI: http://www.churchbuzz.org
