--- a/css/custom.css
+++ b/css/custom.css
@@ -1371,6 +1371,9 @@ div.hr hr {
 .ttl {
     font-size: 15px;
 }
+ul.right_menu_sec-list li.divider {
+    display: none;
+}
 @media only screen  and (min-width: 432px) and (max-width: 1024px){
 
 
