--- a/css/custom.css
+++ b/css/custom.css
@@ -1473,3 +1473,39 @@ ul.right_menu_sec-list li.divider {
 	padding-left:40% !important;
 }
 }
+div#email-subscribers-2 h2 {
+    font-size: 18px;
+}
+.es_button input#es_txt_button {
+    display: inline-block;
+    border-color: #3c4707;
+    background-color: #875010;
+    background: -moz-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #875010), color-stop(100%, #552d07));
+    background: -webkit-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -o-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -ms-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: linear-gradient(top, #875010 0%, #552d07 100%);
+    color: #fff;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 500;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    padding: 4px 12px 4px 12px;
+}
+.es_button {
+    padding-top: 0px;
+    padding-bottom: 5px;
+}
+.es_lablebox {
+    /* padding-bottom: 3px; */
+    color: #4d4d4d;
+    cursor: pointer;
+    display: block;
+    font-size: 0.875rem;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-bottom: 0;
+}
