--- a/css/custom.css
+++ b/css/custom.css
@@ -1520,3 +1520,12 @@ div#email-subscribers-2 h2 {
 	color:#fff !important;
 }
 }
+#respond .form-submit input#submit {
+    background-color: rgb(155, 80, 20);
+    width: 20%;
+    padding: 8px !important;
+    border-radius: 17px !important;
+    border-color: rgb(155, 80, 20) !important;
+    color: white;
+    font-weight: bold !important;
+}
