--- a/css/custom.css
+++ b/css/custom.css
@@ -1529,3 +1529,25 @@ div#email-subscribers-2 h2 {
     color: white;
     font-weight: bold !important;
 }
+#search-2 .form-search input.btn-submit.cat_button {
+    background-color: rgb(155, 80, 20);
+    width: 34%;
+    padding: 8px !important;
+    border-radius: 17px !important;
+    border-color: rgb(155, 80, 20) !important;
+    color: white;
+    font-weight: bold !important;
+}
+.vcard {
+    display: inline-block;
+    margin: 0 0 1.25rem 0;
+    border: 2px solid #D2821F;
+    padding: 0.625rem 0.75rem;
+    width: 50%;
+    border-radius: 12px;
+    box-shadow: 0px 6px 0px rgba(204, 204, 204, 0.36);
+}
+
+.comment-author.vcard img {
+    width: 25%;
+}
