--- a/css/custom.css
+++ b/css/custom.css
@@ -1521,23 +1521,48 @@ div#email-subscribers-2 h2 {
 }
 }
 #respond .form-submit input#submit {
-    background-color: rgb(155, 80, 20);
-    width: 20%;
-    padding: 8px !important;
-    border-radius: 17px !important;
-    border-color: rgb(155, 80, 20) !important;
-    color: white;
-    font-weight: bold !important;
+    
+    display: inline-block;
+    border-color: transparent;
+    background-color: #875010;
+    background: -moz-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #875010), color-stop(100%, #552d07));
+    background: -webkit-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -o-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -ms-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: linear-gradient(top, #875010 0%, #552d07 100%);
+    color: #fff;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 500;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    padding: 4px 12px 4px 12px;
 }
+
+
 #search-2 .form-search input.btn-submit.cat_button {
-    background-color: rgb(155, 80, 20);
-    width: 34%;
-    padding: 8px !important;
-    border-radius: 17px !important;
-    border-color: rgb(155, 80, 20) !important;
-    color: white;
-    font-weight: bold !important;
+    
+    display: inline-block;
+    border-color: transparent;
+    background-color: #875010;
+    background: -moz-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #875010), color-stop(100%, #552d07));
+    background: -webkit-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -o-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: -ms-linear-gradient(top, #875010 0%, #552d07 100%);
+    background: linear-gradient(top, #875010 0%, #552d07 100%);
+    color: #fff;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 500;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    padding: 4px 12px 4px 12px;
 }
+
 .vcard {
     display: inline-block;
     margin: 0 0 1.25rem 0;
