--- a/css/custom.css
+++ b/css/custom.css
@@ -1566,11 +1566,10 @@ div#email-subscribers-2 h2 {
 .vcard {
     display: inline-block;
     margin: 0 0 1.25rem 0;
-    border: 2px solid #D2821F;
     padding: 0.625rem 0.75rem;
     width: 50%;
     border-radius: 12px;
-    box-shadow: 0px 6px 0px rgba(204, 204, 204, 0.36);
+    border-color: white !important;
 }
 
 .comment-author.vcard img {
