--- a/css/custom.css
+++ b/css/custom.css
@@ -1577,4 +1577,7 @@ div#email-subscribers-2 h2 {
 }
 li#comment-2 {
     list-style: none;
+}
+#cs-content .x-container.width {
+     width: 100% !important; 
 } 
