--- a/css/custom.css
+++ b/css/custom.css
@@ -1581,3 +1581,7 @@ li#comment-2 {
 #cs-content .x-container.width {
      width: 100% !important; 
 } 
+#cs-content .h-custom-headline{
+	line-height: 1.2 !important;
+	letter-spacing: 0px !important;
+}
