--- a/css/custom.css
+++ b/css/custom.css
@@ -1593,3 +1593,16 @@ span.page-numbers.current {
 nav.custom-pagination, nav.custom-pagination a {
     font-size: 15px;
 } 
+.breadcrumbs.breadcrumbs_custom a {
+    text-decoration: none;
+    color: #999;
+    font: 13px/1.5 'Open Sans', Arial, Helvetica, Verdana, sans-serif;
+    text-transform: capitalize;
+}
+.breadcrumbs.breadcrumbs_custom > *{
+	color:#b45f06;
+	line-height: 18px;
+}
+.breadcrumbs{
+	color:#b45f06;
+}
