update date on theme

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:
 Author: ChurchBuzz.org
 Author URI: http://www.churchbuzz.org
 Description: Custom Theme created by ChurchBuzz
-Version: October, 2014
+Version: June 26, 2016
 Created: October 1, 2014
 Copyright ChurchBuzz, All Rights Reserved
 */
