comment change to style.css

--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ Theme Name: NorthTexasUMC 2016
 Theme URI:
 Author: ChurchBuzz.org
 Author URI: http://www.churchbuzz.org
-Description: Custom Theme created by ChurchBuzz
-Version: June 28, 2016
-Created: October 1, 2014
-Copyright ChurchBuzz, All Rights Reserved
+Description: Custom Theme created by ChurchBuzz.org
+Version: June 27, 2016
+Created: October 1, 2015
+Copyright North Texas UMC, All Rights Reserved
 */
 /* =WordPress Core
 -------------------------------------------------------------- */
