--- a/css/print-custom.css
+++ b/css/print-custom.css
@@ -239,7 +239,7 @@ ul.dropdown_ct_list li {
 	padding: 31px 0 0;
 	overflow: hidden;
 	color: #fff;
-	background: #65421c url(../images/bg-districts.jpg);
+	background: #65421c;
 	box-shadow: 0 0 20px rgba(0,0,0,0.25) inset;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 	width:100% !important;
